force-app/main/default/objects/Account/fields/Account_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Icon__c</fullName>
    <description>Created by BDD</description>
    <formula>CASE(TEXT( Account_Status__c ), 
&quot;Active&quot;, IMAGE(&quot;/resource/icon_active_account&quot;, &quot;Active&quot;, 32, 33),
&quot;Inactive&quot;, IMAGE(&quot;/resource/icon_inactive_account&quot;, &quot;Inactive&quot;, 32, 33),
&quot;Blacklisted&quot;, IMAGE(&quot;/resource/icon_blacklisted_account&quot;, &quot;Blacklisted&quot;, 32, 33),
IMAGE(&quot;/resource/icon_inactive_account&quot;, &quot;Inactive&quot;, 32, 33))</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>