force-app/main/default/objects/Account/fields/Is_Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Holder</label>
    <type>Checkbox</type>
</CustomField>