force-app/main/default/objects/Account/fields/Terrain_Group_Rating__c.field-meta.xml
<CustomField>
    <fullName>Terrain_Group_Rating__c</fullName>
    <label>Terrain Group Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>