force-app/main/default/objects/Account/fields/VIC_REGION__c.field-meta.xml
<CustomField>
    <fullName>VIC_REGION__c</fullName>
    <description>Area the customer falls into on VIC map</description>
    <label>VIC REGION TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIC 1</fullName>
            </value>
            <value>
                <fullName>VIC 2</fullName>
            </value>
            <value>
                <fullName>VIC 3</fullName>
            </value>
            <value>
                <fullName>VIC 4</fullName>
            </value>
            <value>
                <fullName>VIC 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>