force-app/main/default/objects/Account/validationRules/State_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>State_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>BillingCountry = &quot;Australia&quot; &amp;&amp; BillingState = &quot;&quot;</errorConditionFormula>
    <errorMessage>Please select state</errorMessage>
</ValidationRule>