force-app/main/default/objects/Account/listViews/BUILDERS.listView-meta.xml
<ListView>
    <fullName>BUILDERS</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Construction/Builders</value>
    </filters>
    <label>BUILDERS</label>
</ListView>