force-app/main/default/objects/Account/listViews/Local_Council.listView-meta.xml
<ListView>
    <fullName>Local_Council</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Local Council</value>
    </filters>
    <label>Local Council</label>
</ListView>