force-app/main/default/objects/Account/listViews/SHOPPING_CENTRE_RETAIL.listView-meta.xml
<ListView>
    <fullName>SHOPPING_CENTRE_RETAIL</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Retail</value>
    </filters>
    <label>SHOPPING CENTRE/RETAIL</label>
</ListView>