force-app/main/default/objects/Account/listViews/TAFES.listView-meta.xml
<ListView>
    <fullName>TAFES</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>TAFE</value>
    </filters>
    <label>TAFES</label>
</ListView>